# TI-DETECTION

./: .gitignore  README.md  pyproject.toml
TI_DETECTION/: __init__.py  core.py  create_cnn_handle.py  input_data_handle.py  output_data_handle.py
