[build-system]
requires = ["setuptools>=61.0","wheel"]
build-backend = "setuptools.build_meta"
[project]
name = "TI_DETECTION"
version = "0.0.16"
authors = [{name = "Sohan Costa"}]
description = "TI method to detemine changes in patters"
readme = "README.md"
license = {file="LICENSE"}
requires-python = ">=3.9.16"
dependencies = []

[project.urls]
Homepage = "https://github.com/SohanSanjay/TI-DETECTION.git"


